--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "watch": "npx tailwindcss -i ./app/css/input.css -o ./app/css/style.css --watch",
     "build": "npx tailwindcss -i ./app/css/input.css -o ./app/css/style.css",
-    "write": "npx prettier --write tambah.php"
+    "write": "npx prettier --write ."
   },
   "keywords": [],
   "author": "",
