--- a/mahasiswa/.prettierrc
+++ b/mahasiswa/.prettierrc
@@ -2,7 +2,7 @@
   "semi": false,
   "overrides": [
     {
-      "files": ".php",
+      "files": ".ts",
       "options": {
         "semi": false
       }
